# vartastorage

./: .gitignore  .pre-commit-config.yaml  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/: dependabot.yml
.github/workflows/: python-publish.yml
src/vartastorage/: cgi_client.py  cgi_data.py  client.py  modbus_client.py  test  vartastorage.py
src/vartastorage.egg-info/: PKG-INFO  SOURCES.txt
vartastorage/: client.py  modbus_client.py  vartastorage.py
vartastorage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
